--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-modules index.js"
   },
   "keywords": [],
   "author": "joyboy",
@@ -14,5 +15,8 @@
     "mocha": "^10.4.0",
     "mochawesome": "^7.1.3",
     "supertest": "^7.0.0"
+  },
+  "dependencies": {
+    "gulp-imagemin": "^7.1.0"
   }
 }
